--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -7,7 +7,7 @@ import CustomLink from '../shared/CustomLink.astro';
 <footer>
 	<div class="grid h-screen">
 		<div id="contact" class="flex flex-col justify-center">
-			<section>
+			<section class="z-0">
 				<Subtitle center>Contact</Subtitle>
 				<address class="reveal text-center">
 					<Contact
