--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -12,6 +12,7 @@ export interface Props {
 const { id, title, description, anchorLabel, githubLink } = Astro.props;
 ---
 
+<!-- TODO: improve component -->
 <article
 	id={id}
 	class="reveal m-2 flex flex-col self-start rounded border-[0.1rem] border-solid border-[var(--default-secundary-font-color)] bg-[#322644] p-1 font-lato shadow-lg shadow-black sm:w-[70%] md:w-[65%]"
