--- a/src/components/Header/Link.astro
+++ b/src/components/Header/Link.astro
@@ -2,7 +2,7 @@
 export interface Props {
 	href: string;
 }
-const { href } = Astro.props;
+const { href, arialLabel } = Astro.props;
 const sectionIdWhitoutHome = href.replace('#', '');
 const sectionId = sectionIdWhitoutHome ? sectionIdWhitoutHome : 'home';
 ---
@@ -31,6 +31,7 @@ const sectionId = sectionIdWhitoutHome ? sectionIdWhitoutHome : 'home';
 		class="change-sidebar p-0.5 text-[var(--default-font-color)] no-underline transition-all duration-200 ease-in-out hover:text-[var(--default-secundary-font-color)] hover:drop-shadow-[0rem_0rem_0.3rem_aqua] [&.active]:text-[var(--default-secundary-font-color)] [&.active]:drop-shadow-[0rem_0rem_0.3rem_aqua]"
 		href={href}
 		class:list={[`link-${sectionId}`]}
+		aria-label={arialLabel}
 	>
 		<slot />
 	</a>
