🐞 fix: Props of Link

--- a/src/components/Header/Link.astro
+++ b/src/components/Header/Link.astro
@@ -1,6 +1,7 @@
 ---
 export interface Props {
 	href: string;
+	arialLabel: string;
 }
 const { href, arialLabel } = Astro.props;
 const sectionIdWhitoutHome = href.replace('#', '');
