--- a/src/components/Header/HamburgerManuIcon.astro
+++ b/src/components/Header/HamburgerManuIcon.astro
@@ -17,15 +17,15 @@
 	class="change-sidebar group absolute z-[100] m-3 h-9 w-10"
 >
 	<span
-		class="absolute left-0 top-0 block h-1.5 w-full rounded-lg bg-teal-300 transition-all duration-300 group-[.open]:left-1/2 group-[.open]:top-3 group-[.open]:w-0"
+		class="absolute left-0 top-0 block h-1.5 w-full rounded-lg bg-teal-300 transition-all duration-300 ease-in-out group-[.open]:left-1/2 group-[.open]:top-3 group-[.open]:w-0"
 	></span>
 	<span
-		class="absolute top-3 block h-1.5 w-full rounded-lg bg-teal-300 transition-transform duration-300 group-[.open]:rotate-45"
+		class="absolute top-3 block h-1.5 w-full rounded-lg bg-teal-300 transition-transform duration-300 ease-in-out group-[.open]:rotate-45"
 	></span>
 	<span
-		class="absolute top-3 block h-1.5 w-full rounded-lg bg-teal-300 transition-transform duration-300 group-[.open]:-rotate-45"
+		class="absolute top-3 block h-1.5 w-full rounded-lg bg-teal-300 transition-transform duration-300 ease-in-out group-[.open]:-rotate-45"
 	></span>
 	<span
-		class="absolute left-0 top-6 block h-1.5 w-full rounded-lg bg-teal-300 transition-all duration-300 group-[.open]:left-1/2 group-[.open]:top-3 group-[.open]:w-0"
+		class="absolute left-0 top-6 block h-1.5 w-full rounded-lg bg-teal-300 transition-all duration-300 ease-in-out group-[.open]:left-1/2 group-[.open]:top-3 group-[.open]:w-0"
 	></span>
 </i>
