--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,8 +62,12 @@ const { title } = Astro.props;
 			as="font"
 			href="https://fonts.googleapis.com/css?family=Lato:400italic%27&display=swap"
 		/>
+
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<script
+			src="https://flackr.github.io/scroll-timeline/dist/scroll-timeline.js"
+		></script>
 	</head>
 	<body>
 		<slot />
