🐞 fix: change HamburgerMenuIcon name

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -2,7 +2,7 @@
 import Link from './Link.astro';
 import SideBarLink from './SideBarLink.astro';
 import IconElement from '../shared/IconElement.astro';
-import HamburgerManuIcon from './HamburgerManuIcon.astro';
+import HamburgerMenuIcon from './HamburgerMenuIcon.astro';
 ---
 
 <header>
@@ -35,7 +35,7 @@ import HamburgerManuIcon from './HamburgerManuIcon.astro';
 		</ul>
 	</nav>
 	<nav class="fixed top-0 z-[2] hidden w-full max-sm:block">
-		<HamburgerManuIcon />
+		<HamburgerMenuIcon />
 		<div
 			class="changeable z-[2] h-14 w-full p-3 shadow-[0px_0px_20px] backdrop-blur"
 		>
