--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -18,6 +18,7 @@ import Subtitle from '../shared/Subtitle.astro';
 			title="Angular Portfolio"
 			anchorLabel="See my portfolio github project"
 			githubLink="https://github.com/carlosjorger/portfolio"
+			imageSrc="bg-cuvimakerExample"
 		/>
 		<Project
 			id="online-cv-maker"
@@ -25,6 +26,7 @@ import Subtitle from '../shared/Subtitle.astro';
 			title="Cuvimaker"
 			anchorLabel="See my online cv maker github project"
 			githubLink="https://github.com/carlosjorger/cuvimaker"
+			imageSrc="bg-portfolio"
 		/>
 		<Project
 			id="rusty-copier"
@@ -32,6 +34,7 @@ import Subtitle from '../shared/Subtitle.astro';
 			title="Rusty Copier"
 			anchorLabel="See my rusty copier github project"
 			githubLink="https://github.com/carlosjorger/rustycopier"
+			imageSrc="bg-rustycopier"
 		/>
 	</div>
 </section>
