--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -14,14 +14,14 @@ const { id, title, description, anchorLabel, githubLink, imageSrc } =
 	Astro.props;
 ---
 
-<!-- TODO: improve component --><!-- TODO: organize element in this component -->
+<!-- TODO: add a color filter to background-image --><!-- TODO: organize element in this component -->
 <article
 	id={id}
 	class:list={[imageSrc]}
-	class="reveal m-2 flex min-h-[300px] flex-col self-start rounded border-[0.1rem] border-solid border-[var(--default-secundary-font-color)] bg-[#322644] bg-cover bg-center p-1 font-lato shadow-lg shadow-black sm:w-[70%] md:w-[65%]"
+	class="reveal m-2 flex min-h-[300px] flex-col self-start rounded border-[0.1rem] border-solid border-[var(--default-secundary-font-color)] bg-[#322644] bg-cover bg-center font-lato shadow-lg shadow-black sm:w-[70%] md:w-[65%]"
 >
 	<div
-		class="min-h-[300px] backdrop-brightness-50 transition-all duration-300 hover:backdrop-brightness-100"
+		class="min-h-[300px] p-1 backdrop-brightness-[0.15] transition-all duration-300 ease-in hover:backdrop-brightness-50"
 	>
 		<header class="p-2 text-[var(--default-font-color)]">
 			<h3 class="m-0">{title}</h3>
