✨ feat: change properties of Project component

--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -21,7 +21,7 @@ const { id, title, description, anchorLabel, githubLink, imageSrc } =
 	class="reveal m-2 flex w-full flex-col self-start rounded border-[0.1rem] border-solid border-[var(--default-secundary-font-color)] bg-[#322644] bg-cover bg-center bg-no-repeat font-lato shadow-lg shadow-black"
 >
 	<div
-		class="h-72 p-1 backdrop-brightness-[0.15] transition-all duration-300 ease-in hover:backdrop-brightness-50 max-lg:h-80 max-md:h-64 max-sm:h-52"
+		class="h-72 bg-[#decffd60] p-1 backdrop-brightness-[0.4] backdrop-grayscale transition-all duration-300 ease-in hover:bg-teal-600/0 hover:backdrop-grayscale-0 max-lg:h-80 max-md:h-64 max-sm:h-52"
 	>
 		<header class="p-2 text-[var(--default-font-color)]">
 			<h3 class="m-0">{title}</h3>
