--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,7 @@
 :root {
 	--default-font-family: 'Lato', sans-serif;
 	--default-font-color: rgb(222, 207, 253);
-	--default-font-color2: rgb(190, 185, 201);
+	--default-font-color2: #beb9c9;
 
 	--default-secundary-font-color: rgb(6, 232, 232);
 	--default-background-color: rgb(36, 23, 48);
