✨ feat: add dvh in mobile view

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -3,7 +3,7 @@ import Subtitle from './shared/Subtitle.astro';
 import CustomParagraph from './shared/CustomParagraph.astro';
 ---
 
-<section id="aboutMe" class="h-screen">
+<section id="aboutMe" class="h-screen max-sm:h-[100dvh]">
 	<div class="flex h-[90%] flex-col justify-center p-4">
 		<header class="reveal">
 			<Subtitle left>About me</Subtitle>
