--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -5,7 +5,7 @@ import CustomLink from '../shared/CustomLink.astro';
 ---
 
 <footer>
-	<div class="grid h-screen">
+	<div class="grid h-screen max-sm:h-[100dvh]">
 		<div id="contact" class="flex flex-col justify-center">
 			<section class="z-0">
 				<Subtitle center>Contact</Subtitle>
