--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -41,7 +41,7 @@ import HamburgerMenuIcon from './HamburgerMenuIcon.astro';
 		>
 		</div>
 		<div
-			class="nav-columnar-menu-background changeable bg-[rgba(0, 0, 0, 0)] invisible absolute top-0 z-50 mt-0 h-screen w-screen overflow-hidden p-0 transition-all delay-100 duration-300 ease-out [&.active]:bg-[#00000080] [&.active]:ease-in-out"
+			class="nav-columnar-menu-background changeable bg-[rgba(0, 0, 0, 0)] invisible absolute top-0 z-50 mt-0 h-screen w-screen overflow-hidden p-0 transition-all delay-100 duration-300 ease-out max-sm:h-[100dvh] [&.active]:bg-[#00000080] [&.active]:ease-in-out"
 		>
 			<div
 				id="nav-columnar-menu"
