--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -2,7 +2,10 @@
 import CustomParagraph from './shared/CustomParagraph.astro';
 ---
 
-<section id="home" class="flex h-screen flex-col justify-evenly">
+<section
+	id="home"
+	class="flex h-screen flex-col justify-evenly max-sm:h-[100dvh]"
+>
 	<div class="p-4 font-lato text-[var(--default-font-color)] max-sm:p-2">
 		<div class="reveal">
 			<h1
