--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -14,29 +14,33 @@ const { id, title, description, anchorLabel, githubLink, imageSrc } =
 	Astro.props;
 ---
 
-<!-- TODO: add a color filter to background-image --><!-- TODO: organize element in this component -->
+<!-- TODO: organize element in this component --><!-- TODO: add width to elements -->
 <article
 	id={id}
 	class:list={[imageSrc]}
 	class="reveal m-2 flex w-full flex-col self-start rounded border-[0.1rem] border-solid border-[var(--default-secundary-font-color)] bg-[#322644] bg-cover bg-center bg-no-repeat font-lato shadow-lg shadow-black"
 >
 	<div
-		class="h-72 bg-[#decffd60] p-1 backdrop-brightness-[0.4] backdrop-grayscale transition-all duration-300 ease-in hover:bg-teal-600/0 hover:backdrop-grayscale-0 max-lg:h-80 max-md:h-64 max-sm:h-52"
+		class="h-72 bg-[#5c497f9d] p-1 backdrop-brightness-[0.4] backdrop-grayscale transition-all duration-300 ease-in hover:bg-teal-600/0 hover:backdrop-grayscale-0 max-lg:h-80 max-md:h-64 max-sm:h-52"
 	>
-		<header class="p-2 text-[var(--default-font-color)]">
-			<h3 class="m-0">{title}</h3>
-		</header>
-		<div class="p-2 text-xs text-[#99F9F9]">
-			<CustomParagraph>{description}</CustomParagraph>
-		</div>
-		<div class="flex self-end">
-			<a href={githubLink} aria-label={anchorLabel} class="h-7"
-				><IconElement
-					height="h-auto"
-					width="w-6"
-					iconType="github"
-				/></a
-			>
-		</div>
+		<section
+			class="flex h-full w-full flex-col items-start justify-end px-10 py-7"
+		>
+			<header class="p-2 text-[var(--default-font-color)]">
+				<h3 class="m-0">{title}</h3>
+			</header>
+			<div class="p-2 text-xs text-[#99F9F9]">
+				<CustomParagraph>{description}</CustomParagraph>
+			</div>
+			<div class="flex flex-row self-end p-1">
+				<a href={githubLink} aria-label={anchorLabel} class="h-7"
+					><IconElement
+						height="h-auto"
+						width="w-6"
+						iconType="github"
+					/></a
+				>
+			</div>
+		</section>
 	</div>
 </article>
