🐞 fix: change CustomParagraph styles

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -8,16 +8,16 @@ import CustomParagraph from './shared/CustomParagraph.astro';
 		<header class="reveal">
 			<Subtitle left>About me</Subtitle>
 		</header>
-		<CustomParagraph>
+		<CustomParagraph reveal>
 			Hello, My name is Carlos Jorge. I'm a full-stack engineer that enjoy
 			coding on and off the work. I started working as a backend developer
 			in 2020 using .net technologies and sql server.
 		</CustomParagraph>
-		<CustomParagraph>
+		<CustomParagraph reveal>
 			Currently, I'm also working on frontend technologies like angular,
 			vue, html, css.
 		</CustomParagraph>
-		<CustomParagraph>
+		<CustomParagraph reveal>
 			In my free time I like listening to music, reading books or watching
 			movies from favorite directors.
 		</CustomParagraph>
