--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -21,7 +21,7 @@ const { id, title, description, anchorLabel, githubLink, imageSrc } =
 	class="reveal m-2 flex w-full flex-col self-start rounded border-[0.1rem] border-solid border-[var(--default-secundary-font-color)] bg-[#322644] bg-cover bg-center bg-no-repeat font-lato shadow-lg shadow-black"
 >
 	<div
-		class="h-72 bg-[#5c497fc5] p-1 backdrop-brightness-[0.35] backdrop-grayscale transition-all duration-300 ease-in hover:bg-teal-600/0 hover:backdrop-grayscale-0 max-lg:h-80 max-md:h-64 max-sm:h-52 hover:[&>*:first-child]:scale-110"
+		class="h-72 bg-[#5c497fc5] p-1 backdrop-brightness-[0.35] backdrop-grayscale transition-all duration-300 ease-in-out hover:bg-teal-600/0 hover:backdrop-grayscale-0 max-lg:h-80 max-md:h-64 max-sm:h-52 [&>*:first-child]:hover:scale-110"
 	>
 		<section
 			class="m-0 flex h-full w-3/4 flex-col items-start justify-end px-10 py-7 transition-[transform]"
