--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -9,12 +9,13 @@ export interface Props {
 	anchorLabel: string;
 	githubLink: string;
 	imageSrc: string;
+	website?: string;
 }
-const { id, title, description, anchorLabel, githubLink, imageSrc } =
+const { id, title, description, anchorLabel, githubLink, imageSrc, website } =
 	Astro.props;
 ---
 
-<!-- TODO: organize element in this component --><!-- TODO: add width to elements -->
+<!-- TODO: organize element in this component -->
 <article
 	id={id}
 	class:list={[imageSrc]}
@@ -24,9 +25,9 @@ const { id, title, description, anchorLabel, githubLink, imageSrc } =
 		class="h-72 bg-[#5c497fc5] p-1 backdrop-brightness-[0.35] backdrop-grayscale transition-all duration-300 ease-in-out hover:bg-teal-600/0 hover:backdrop-grayscale-0 max-lg:h-80 max-md:h-64 max-sm:h-52 [&>*:first-child]:hover:scale-110"
 	>
 		<section
-			class="m-0 flex h-full w-3/4 flex-col items-start justify-end px-10 py-7 transition-[transform]"
+			class="m-0 flex h-full w-3/4 flex-col items-start justify-end px-10 py-12 transition-[transform]"
 		>
-			<header class="p-1 text-2xl font-extrabold text-teal-200">
+			<header class="p-1 text-3xl font-extrabold text-teal-200">
 				<h3 class="m-0">{title}</h3>
 			</header>
 			<div class="p-1 pb-0 text-xs text-[#99F9F9]">
@@ -36,10 +37,21 @@ const { id, title, description, anchorLabel, githubLink, imageSrc } =
 				<a href={githubLink} aria-label={anchorLabel} class="h-7"
 					><IconElement
 						height="h-auto"
-						width="w-6"
+						width="w-8"
 						iconType="github"
 					/></a
 				>
+				{
+					website !== undefined && (
+						<a href={website} aria-label={anchorLabel} class="h-7">
+							<IconElement
+								height="h-auto"
+								width="w-8"
+								iconType="ph:link-bold"
+							/>
+						</a>
+					)
+				}
 			</div>
 		</section>
 	</div>
