--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -19,6 +19,7 @@ import Subtitle from '../shared/Subtitle.astro';
 			anchorLabel="See my portfolio github project"
 			githubLink="https://github.com/carlosjorger/portfolio"
 			imageSrc="bg-portfolio"
+			website="https://carlosjorger.github.io/portfolio/"
 		/>
 		<Project
 			id="online-cv-maker"
@@ -27,6 +28,7 @@ import Subtitle from '../shared/Subtitle.astro';
 			anchorLabel="See my online cv maker github project"
 			githubLink="https://github.com/carlosjorger/cuvimaker"
 			imageSrc="bg-cuvimakerExample"
+			website="https://cuvimaker.netlify.app/"
 		/>
 		<Project
 			id="rusty-copier"
