--- a/src/components/Header/HamburgerMenuIcon.astro
+++ b/src/components/Header/HamburgerMenuIcon.astro
@@ -7,6 +7,7 @@
 
 	document.addEventListener('DOMContentLoaded', function () {
 		const navBarIcon = document.getElementById('hamburger-menu-icon');
+		//TODO: event is fired when is cliked a another link
 		navBarIcon.addEventListener('click', () => {
 			toggleHamburgerMenuIcon();
 		});
