🐞 fix: IconElement hover shadow

--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -15,17 +15,16 @@ const { id, title, description, anchorLabel, githubLink, imageSrc, website } =
 	Astro.props;
 ---
 
-<!-- TODO: organize element in this component -->
 <article
 	id={id}
 	class:list={[imageSrc]}
 	class="reveal m-2 flex w-full flex-col self-start rounded border-[0.1rem] border-solid border-[var(--default-secundary-font-color)] bg-[#322644] bg-cover bg-center bg-no-repeat font-lato shadow-lg shadow-black"
 >
 	<div
-		class="h-72 bg-[#5c497fc5] p-1 backdrop-brightness-[0.35] backdrop-grayscale transition-all duration-300 ease-in-out hover:bg-teal-600/0 hover:backdrop-grayscale-0 max-lg:h-80 max-md:h-64 max-sm:h-52 [&>*:first-child]:hover:scale-110"
+		class="h-72 bg-[#5c497fc5] p-1 backdrop-brightness-[0.35] backdrop-grayscale transition-all duration-300 ease-in-out hover:bg-teal-600/0 hover:backdrop-grayscale-0 max-lg:h-80 max-md:h-64 max-sm:h-52 [&>*:first-child]:hover:scale-105"
 	>
 		<section
-			class="m-0 flex h-full w-3/4 flex-col items-start justify-end px-8 py-10 transition-[transform] max-sm:w-full max-sm:px-8 max-sm:py-10"
+			class="m-0 flex h-full w-3/4 flex-col items-start justify-end px-8 py-10 transition-[transform] duration-300 max-sm:w-full max-sm:px-8 max-sm:py-10"
 		>
 			<header
 				class="p-1 text-3xl font-extrabold text-teal-200 max-sm:text-[1.65rem]"
