📃 docs: add  TODO

--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -2,6 +2,7 @@
 import CustomParagraph from './shared/CustomParagraph.astro';
 ---
 
+<!-- TODO: improve presentation mobile design -->
 <section
 	id="home"
 	class="flex h-screen flex-col justify-evenly max-sm:h-[100dvh]"
