🐞 fix: make letters bigger

--- a/src/components/shared/CustomParagraph.astro
+++ b/src/components/shared/CustomParagraph.astro
@@ -7,7 +7,7 @@ const { reveal = false } = Astro.props;
 
 <p
 	class:list={[{ reveal: reveal }]}
-	class="mb-2.5 text-[var(--default-font-color2)]"
+	class="mb-2.5 text-lg text-[var(--default-font-color2)]"
 >
 	<slot />
 </p>
