--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,6 +20,7 @@ import Presentation from '../components/Presentation.astro';
 		}
 	});
 </script>
+<!-- TODO: remove space betwean section -->
 <Layout title="Carlos Jorge's personal portfolio website">
 	<Header />
 	<main>
