✨ feat: change margin and paddings

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -4,7 +4,7 @@ import CustomParagraph from './shared/CustomParagraph.astro';
 ---
 
 <section id="aboutMe" class="h-screen max-sm:h-[100dvh]">
-	<div class="flex h-[90%] flex-col justify-center p-4">
+	<div class="flex h-[90%] flex-col justify-center break-words p-2">
 		<header class="reveal">
 			<Subtitle left>About me</Subtitle>
 		</header>
