--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -36,7 +36,7 @@ import CustomLink from '../shared/CustomLink.astro';
 		<div
 			class="flex flex-col justify-center font-lato text-[var(--default-font-color)]"
 		>
-			<p class="reveal mx-auto my-0 mb-12 text-center text-xl">
+			<p class="reveal mx-auto my-0 mb-12 text-center text-2xl">
 				<strong class="inline italic">© 2022 Carlos Jorge</strong>
 				<br />
 				<span>
