--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -7,7 +7,7 @@ import CustomParagraph from './shared/CustomParagraph.astro';
 	id="home"
 	class="flex h-screen flex-col justify-evenly max-sm:h-[100dvh]"
 >
-	<div class="p-4 font-lato text-[var(--default-font-color)] max-sm:p-2">
+	<div class="p-2 font-lato text-[var(--default-font-color)]">
 		<div class="reveal">
 			<h1
 				class="mx-0 my-3 animate-presentation-title text-5xl text-[var(--default-secundary-font-color)] max-sm:text-5xl"
@@ -17,13 +17,11 @@ import CustomParagraph from './shared/CustomParagraph.astro';
 			</h1>
 		</div>
 		<div class="reveal">
-			<h2
-				class="mx-0 my-3 animate-presentation-main-skill text-3xl max-sm:text-4xl"
-			>
+			<h2 class="mx-0 my-3 animate-presentation-main-skill text-4xl">
 				Welcome to my personal portfolio!
 			</h2>
 		</div>
-		<div class="mx-0 my-3 animate-presentation-description">
+		<div class="mx-0 my-3 animate-presentation-description break-words">
 			<CustomParagraph>
 				Cuban computer science from Havana University. Currently working
 				as full-stack engineer building .net and Vuejs applications.
