--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -4,8 +4,8 @@ import Subtitle from '../shared/Subtitle.astro';
 ---
 
 <section id="work">
-	<div class="flex flex-col p-4">
-		<header class="reveal p-3">
+	<div class="flex flex-col p-2">
+		<header class="reveal my-5 mb-2">
 			<Subtitle left>
 				Some projects<br />
 				 I've made
