📃 docs: improve presentation mobile design

--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -2,22 +2,23 @@
 import CustomParagraph from './shared/CustomParagraph.astro';
 ---
 
-<!-- TODO: improve presentation mobile design -->
 <section
 	id="home"
-	class="flex h-screen flex-col justify-evenly max-sm:h-[100dvh]"
+	class="flex h-screen flex-col justify-evenly pt-0 max-sm:h-[100dvh]"
 >
 	<div class="p-2 font-lato text-[var(--default-font-color)]">
 		<div class="reveal">
 			<h1
-				class="mx-0 my-3 animate-presentation-title text-5xl text-[var(--default-secundary-font-color)] max-sm:text-5xl"
+				class="mx-0 my-3 animate-presentation-title text-5xl font-bold text-[var(--default-secundary-font-color)] max-sm:text-5xl"
 			>
 				Hi, I am <br class="hidden max-sm:inline" />Carlos Jorge, <br />
 				 Web developer!
 			</h1>
 		</div>
 		<div class="reveal">
-			<h2 class="mx-0 my-3 animate-presentation-main-skill text-4xl">
+			<h2
+				class="mx-0 my-3 animate-presentation-main-skill text-4xl text-[2.52rem] font-bold"
+			>
 				Welcome to my personal portfolio!
 			</h2>
 		</div>
