🐞 fix: some bugs

--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -24,8 +24,9 @@ import CustomParagraph from './shared/CustomParagraph.astro';
 		</div>
 		<div class="mx-0 my-3 animate-presentation-description break-words">
 			<CustomParagraph>
-				Cuban computer science from Havana University. Currently working
-				as full-stack engineer building .net and Vuejs applications.
+				Cuban computer scientist from Havana University. Currently
+				working as full-stack engineer building .net and Vuejs
+				applications.
 			</CustomParagraph>
 		</div>
 	</div>
