--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -21,10 +21,10 @@ const { id, title, description, anchorLabel, githubLink, imageSrc, website } =
 	class="reveal my-2 flex w-full flex-col self-start rounded border-[0.1rem] border-solid border-[var(--default-secundary-font-color)] bg-[#322644] bg-cover bg-center bg-no-repeat font-lato shadow-lg shadow-black"
 >
 	<div
-		class="h-72 bg-[#5c497fc5] p-1 backdrop-brightness-[0.35] backdrop-grayscale transition-all duration-300 ease-in-out hover:bg-teal-600/0 hover:backdrop-grayscale-0 max-lg:h-80 max-md:h-64 max-sm:h-52 [&>*:first-child]:hover:scale-105"
+		class="h-72 bg-[#5c497fc5] p-1 backdrop-brightness-[0.2] backdrop-grayscale transition-all duration-300 ease-in-out hover:bg-teal-600/0 hover:backdrop-grayscale-0 max-lg:h-80 max-md:h-64 max-sm:h-52 [&>*:first-child]:hover:scale-110"
 	>
 		<section
-			class="m-0 flex h-full w-4/5 flex-col items-start justify-end px-8 py-10 transition-[transform] duration-300 max-sm:w-full max-sm:px-5 max-sm:py-7"
+			class="m-0 flex h-full w-5/6 flex-col items-start justify-end px-8 py-10 transition-[transform] duration-300 max-sm:w-full max-sm:px-5 max-sm:py-7"
 		>
 			<header
 				class="p-1 text-3xl font-extrabold text-teal-200 max-sm:text-[1.65rem]"
@@ -32,7 +32,9 @@ const { id, title, description, anchorLabel, githubLink, imageSrc, website } =
 				<h3 class="m-0">{title}</h3>
 			</header>
 			<div class="p-1 pb-0 text-xs text-[#99F9F9]">
-				<CustomParagraph>{description}</CustomParagraph>
+				<CustomParagraph textColor="text-slate-50">
+					{description}
+				</CustomParagraph>
 			</div>
 			<div class="flex flex-row self-start">
 				<a href={githubLink} aria-label={anchorLabel} class="h-7"
