--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import Presentation from '../components/Presentation.astro';
 		}
 	});
 </script>
-<!-- TODO: remove space betwean section -->
+<!-- TODO: remove space betwean section --><!-- TODO: Add skills --><!-- TODO: add a link to download the cv -->
 <Layout title="Carlos Jorge's personal portfolio website">
 	<Header />
 	<main>
