--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -17,16 +17,18 @@ import CustomParagraph from './shared/CustomParagraph.astro';
 		</div>
 		<div class="reveal">
 			<h2
-				class="mx-0 my-3 animate-presentation-main-skill text-4xl text-[2.52rem] font-bold"
+				class="mx-0 my-3 animate-presentation-main-skill text-4xl text-[2.52rem] font-bold max-sm:mt-4"
 			>
 				Welcome to my personal portfolio!
 			</h2>
 		</div>
-		<div class="mx-0 my-3 animate-presentation-description break-words">
+		<div
+			class="mx-0 my-6 animate-presentation-description break-words max-sm:mt-7"
+		>
 			<CustomParagraph>
 				Cuban computer scientist from Havana University. Currently
 				working as full-stack engineer building .net and Vuejs
-				applications.
+				applications. I play with astro and rust in my free time
 			</CustomParagraph>
 		</div>
 	</div>
