✨ feat: add cv button

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -21,5 +21,11 @@ import CustomParagraph from './shared/CustomParagraph.astro';
 			In my free time I like listening to music, reading books or watching
 			movies from favorite directors.
 		</CustomParagraph>
+		<a
+			class="mt-8 rounded-md border-2 border-teal-300 px-8 py-4 text-center text-xl text-teal-300"
+			href="/images/cv.pdf"
+			target="_blank"
+			aria-label="Download Curriculum Vitae pdf">Curriculum Vitae</a
+		>
 	</div>
 </section>
