✨ feat: add styles to Curriculum Vitae

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -22,7 +22,7 @@ import CustomParagraph from './shared/CustomParagraph.astro';
 			movies from favorite directors.
 		</CustomParagraph>
 		<a
-			class="mt-8 rounded-md border-2 border-teal-300 px-8 py-4 text-center text-xl text-teal-300"
+			class="reveal mt-8 rounded-md border-2 border-teal-300 px-8 py-4 text-center text-2xl text-teal-300 transition-colors duration-500 ease-in hover:bg-teal-300 hover:text-[--default-background-color]"
 			href="/images/cv.pdf"
 			target="_blank"
 			aria-label="Download Curriculum Vitae pdf">Curriculum Vitae</a
