--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -6,9 +6,9 @@ import CustomParagraph from '../shared/CustomParagraph.astro';
 ---
 
 <footer>
-	<div class="m-1 grid h-screen max-sm:h-[100dvh]">
+	<div class="m-1 grid h-screen max-sm:h-[70dvh]">
 		<div id="contact" class="flex flex-col justify-center">
-			<section class="z-0 mt-8 w-1/2 p-2 max-sm:w-[90%]">
+			<section class="z-0 mt-8 w-1/2 p-2 max-sm:mt-0 max-sm:w-[90%]">
 				<Subtitle center>Contact</Subtitle>
 				<div class="reveal mx-0 my-3 text-center">
 					<CustomParagraph>
@@ -44,7 +44,7 @@ import CustomParagraph from '../shared/CustomParagraph.astro';
 		<div
 			class="flex flex-col justify-center font-lato text-[var(--default-font-color)]"
 		>
-			<p class="reveal mx-auto my-0 mb-12 text-center text-3xl">
+			<p class="last-reveal mx-auto my-0 mb-12 text-center text-3xl">
 				<strong class="inline italic">© 2022 Carlos Jorge</strong>
 				<br />
 				<span>
