--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -49,6 +49,11 @@ a {
 	animation-timeline: view();
 	animation-range: entry 20% cover 30%;
 }
+.last-reveal {
+	animation: reveal-animation linear both;
+	animation-timeline: view();
+	animation-range: entry 10% cover 20%;
+}
 @keyframes reveal-animation {
 	from {
 		opacity: 0;
