📃 docs: Add TODO

--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -15,6 +15,7 @@ const { id, title, description, anchorLabel, githubLink, imageSrc, website } =
 	Astro.props;
 ---
 
+<!-- TODO: optimize image loaging -->
 <article
 	id={id}
 	class:list={[imageSrc]}
