--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -15,11 +15,34 @@ const { id, title, description, anchorLabel, githubLink, imageSrc, website } =
 	Astro.props;
 ---
 
-<!-- TODO: optimize image loaging -->
+<script>
+	document.addEventListener('DOMContentLoaded', () => {
+		var lazyBackgrounds = [].slice.call(
+			document.querySelectorAll('.lazy-background')
+		);
+		if ('IntersectionObserver' in window) {
+			let lazyBackgroundObserver = new IntersectionObserver(
+				(entries, observer) => {
+					entries.forEach((entry) => {
+						if (entry.isIntersecting) {
+							console.log(entry.target);
+							entry.target.classList.add('visibleImg');
+							lazyBackgroundObserver.unobserve(entry.target);
+						}
+					});
+				}
+			);
+
+			lazyBackgrounds.forEach((lazyBackground: HTMLElement) => {
+				lazyBackgroundObserver.observe(lazyBackground);
+			});
+		}
+	});
+</script>
 <article
 	id={id}
 	class:list={[imageSrc]}
-	class="reveal my-2 flex w-full flex-col self-start rounded border-[0.1rem] border-solid border-[var(--default-secundary-font-color)] bg-[#322644] bg-cover bg-center bg-no-repeat font-lato shadow-lg shadow-black"
+	class="reveal bg-placeholder lazy-background my-2 flex w-full flex-col self-start rounded border-[0.1rem] border-solid border-[var(--default-secundary-font-color)] bg-[#322644] bg-cover bg-center bg-no-repeat font-lato shadow-lg shadow-black"
 >
 	<div
 		class="h-72 bg-[#5c497fc5] p-1 backdrop-brightness-[0.2] backdrop-grayscale transition-all duration-300 ease-in-out hover:bg-teal-600/0 hover:backdrop-grayscale-0 max-lg:h-80 max-md:h-64 max-sm:h-52 [&>*:first-child]:hover:scale-110"
