--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -18,7 +18,7 @@ import Subtitle from '../shared/Subtitle.astro';
 			title="Cuvimaker"
 			anchorLabel="See my online cv maker github project"
 			githubLink="https://github.com/carlosjorger/cuvimaker"
-			imageSrc="bg-cuvimakerExample"
+			imageSrc="[&.visibleImg]:bg-cuvimakerExample"
 			website="https://cuvimaker.netlify.app/"
 		/>
 		<Project
@@ -27,7 +27,7 @@ import Subtitle from '../shared/Subtitle.astro';
 			title="Rusty Copier"
 			anchorLabel="See my rusty copier github project"
 			githubLink="https://github.com/carlosjorger/rustycopier"
-			imageSrc="bg-rustycopier"
+			imageSrc="[&.visibleImg]:bg-rustycopier"
 		/>
 		<Project
 			id="angular-portfolio"
@@ -35,7 +35,7 @@ import Subtitle from '../shared/Subtitle.astro';
 			title="Angular Portfolio"
 			anchorLabel="See my portfolio github project"
 			githubLink="https://github.com/carlosjorger/portfolio"
-			imageSrc="bg-portfolio"
+			imageSrc="[&.visibleImg]:bg-portfolio"
 			website="https://carlosjorger.github.io/portfolio/"
 		/>
 	</div>
