🎈 perf:  improve accesibility

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -50,11 +50,15 @@ import CustomParagraph from '../shared/CustomParagraph.astro';
 				<span>
 					<CustomLink
 						href="https://github.com/carlosjorger/carlosjorger.github.io"
+						arialLabel="Github project link"
 					>
 						Published
 					</CustomLink>
 					 in
-					<CustomLink href="https://pages.github.com/">
+					<CustomLink
+						href="https://pages.github.com/"
+						arialLabel="Github pages link"
+					>
 						Github Page
 					</CustomLink>
 					<span></span>
