--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -11,7 +11,7 @@ import HamburgerMenuIcon from './HamburgerMenuIcon.astro';
 			class="m-0 flex list-none flex-row justify-between p-0.5 max-sm:hidden [&>li]:self-center"
 		>
 			<li class="p-1">
-				<Link href="#" arialLabel="Go to presentation">
+				<Link href="#home" arialLabel="Go to presentation">
 					<IconElement iconType="house" height="h-6" width="w-7" />
 				</Link>
 			</li>
