🐞 fix: about me text

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -18,7 +18,7 @@ import CustomParagraph from './shared/CustomParagraph.astro';
 			vue, html, css.
 		</CustomParagraph>
 		<a
-			class="reveal mt-2 rounded-md border-2 border-teal-300 px-8 py-4 text-center text-2xl text-teal-300 transition-colors duration-500 ease-in hover:bg-teal-300 hover:text-[--default-background-color] max-sm:mt-12"
+			class="reveal mt-2 rounded-md border-2 border-teal-300 px-8 py-4 text-center text-2xl font-bold text-teal-300 transition-colors duration-500 ease-out hover:bg-teal-300 hover:text-[--default-background-color] max-sm:mt-12"
 			href="/pdfs/resume.pdf"
 			target="_blank"
 			aria-label="Download Curriculum Vitae pdf">Curriculum Vitae</a
