--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -12,7 +12,7 @@ import CustomParagraph from '../shared/CustomParagraph.astro';
 				<Subtitle center>Contact</Subtitle>
 				<div class="reveal mx-0 my-3 text-center">
 					<CustomParagraph>
-						I'm always open for new job oportunities or asking any
+						I'm always open for new job oportunities or answer any
 						question. You can reach me through the following social
 						networks:
 					</CustomParagraph>
