--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -39,13 +39,13 @@ const { id, title, description, anchorLabel, githubLink, imageSrc, website } =
 <article
 	id={id}
 	class:list={[imageSrc]}
-	class="reveal lazy-background my-2 flex w-full flex-col self-start rounded border-[0.1rem] border-solid border-[var(--default-secundary-font-color)] bg-[#322644] bg-placeholder bg-cover bg-center bg-no-repeat font-lato shadow-lg shadow-black"
+	class="reveal lazy-background even-parent my-2 mb-10 flex w-11/12 flex-col self-start rounded border-[0.1rem] border-solid border-[var(--default-secundary-font-color)] bg-[#322644] bg-placeholder bg-cover bg-center bg-no-repeat font-lato shadow-lg shadow-black even:self-end even:text-right max-sm:mb-6 max-sm:mt-8"
 >
 	<div
-		class="h-72 bg-[#5c497fc5] p-1 backdrop-brightness-[0.2] backdrop-grayscale transition-all duration-300 ease-in-out hover:bg-teal-600/0 hover:backdrop-grayscale-0 max-lg:h-80 max-md:h-64 max-sm:h-52 [&>*:first-child]:hover:scale-110 max-sm:[&>*:first-child]:hover:scale-105"
+		class="h-60 bg-[#5c497fc5] p-1 backdrop-brightness-[0.2] backdrop-grayscale transition-all duration-300 ease-in-out hover:bg-teal-600/0 hover:backdrop-grayscale-0 max-lg:h-80 max-md:h-64 max-sm:h-52 [&>*:first-child]:hover:scale-110 max-sm:[&>*:first-child]:hover:scale-105"
 	>
 		<section
-			class="m-0 flex h-full w-5/6 flex-col items-start justify-end px-8 py-10 transition-[transform] duration-300 max-sm:w-full max-sm:px-2 max-sm:py-3"
+			class="even-child m-0 flex h-full w-5/6 flex-col items-start justify-end px-8 py-6 transition-[transform] duration-300 max-sm:w-full max-sm:px-2 max-sm:py-3"
 		>
 			<header
 				class="p-1 text-3xl font-extrabold text-teal-200 max-sm:text-[1.65rem]"
@@ -57,7 +57,7 @@ const { id, title, description, anchorLabel, githubLink, imageSrc, website } =
 					{description}
 				</CustomParagraph>
 			</div>
-			<div class="flex flex-row self-start">
+			<div class="even-self-child flex flex-row self-start">
 				<a href={githubLink} aria-label={anchorLabel} class="h-7"
 					><IconElement
 						height="h-auto"
@@ -80,3 +80,12 @@ const { id, title, description, anchorLabel, githubLink, imageSrc, website } =
 		</section>
 	</div>
 </article>
+<style>
+	.even-parent:nth-child(even) .even-child {
+		align-items: flex-end !important;
+		margin-left: auto;
+	}
+	.even-parent:nth-child(even) .even-self-child {
+		align-self: flex-end !important;
+	}
+</style>
