📃 docs: Add TODO

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -17,6 +17,7 @@ import CustomParagraph from '../shared/CustomParagraph.astro';
 						networks:
 					</CustomParagraph>
 				</div>
+				<!-- TODO: avoid launch sidebar event if a contact is clicked -->
 				<address class="reveal text-center">
 					<Contact
 						href="mailto:rodriguezcuelloc@gmail.com"
