🐞 fix: avoid launch eventlisenting from icons

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -17,7 +17,7 @@ import HamburgerMenuIcon from './HamburgerMenuIcon.astro';
 			</li>
 			<li class="mx-2">
 				<Link href="#work" arialLabel="See my work experience">
-					Work
+					Projects
 				</Link>
 				<Link
 					href="#aboutMe"
@@ -69,7 +69,7 @@ import HamburgerMenuIcon from './HamburgerMenuIcon.astro';
 						<SideBarLink href="#" label="Home" iconType="house" />
 						<SideBarLink
 							href="#work"
-							label="Work"
+							label="Projects"
 							iconType="code-blocks"
 						/>
 						<SideBarLink
