--- a/src/components/Header/Link.astro
+++ b/src/components/Header/Link.astro
@@ -29,7 +29,7 @@ const sectionId = sectionIdWhitoutHome ? sectionIdWhitoutHome : 'home';
 </script>
 <custom-link data-section-id={sectionId}>
 	<a
-		class="change-sidebar p-0.5 text-[var(--default-font-color)] no-underline transition-all duration-200 ease-in-out hover:text-[var(--default-secundary-font-color)] hover:drop-shadow-[0rem_0rem_0.3rem_aqua] [&.active]:text-[var(--default-secundary-font-color)] [&.active]:drop-shadow-[0rem_0rem_0.3rem_aqua]"
+		class="change-sidebar mx-0.5 p-0.5 text-[var(--default-font-color)] no-underline transition-all duration-200 ease-in-out hover:text-[var(--default-secundary-font-color)] hover:drop-shadow-[0rem_0rem_0.3rem_aqua] [&.active]:text-[var(--default-secundary-font-color)] [&.active]:drop-shadow-[0rem_0rem_0.3rem_aqua]"
 		href={href}
 		class:list={[`link-${sectionId}`]}
 		aria-label={arialLabel}
