🐞 fix: About me section padding

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -3,8 +3,7 @@ import Subtitle from './shared/Subtitle.astro';
 import CustomParagraph from './shared/CustomParagraph.astro';
 ---
 
-<!-- TODO: fix About me section -->
-<section id="aboutMe" class="h-screen max-sm:mt-12 max-sm:h-full">
+<section id="aboutMe" class="h-screen max-sm:h-full max-sm:pt-16">
 	<div class="flex h-[90%] flex-col justify-center break-words p-2">
 		<header class="reveal pb-2">
 			<Subtitle left>About me</Subtitle>
