--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -44,8 +44,8 @@ const { id, title, description, anchorLabel, githubLink, imageSrc, website } =
 	<div
 		class="h-60 bg-[#5c497fc5] p-1 backdrop-brightness-[0.2] backdrop-grayscale transition-all duration-300 ease-in-out hover:bg-teal-600/0 hover:backdrop-grayscale-0 max-lg:h-80 max-md:h-64 max-sm:h-52 [&>*:first-child]:hover:scale-110 max-sm:[&>*:first-child]:hover:scale-105"
 	>
-		<section
-			class="even-child m-0 flex h-full w-5/6 flex-col items-start justify-end px-8 py-6 transition-[transform] duration-300 max-sm:w-full max-sm:justify-between max-sm:px-2 max-sm:py-3"
+		<article
+			class="even-child m-0 flex h-full w-5/6 flex-col items-start justify-end p-6 transition-[transform] duration-300 max-sm:w-full max-sm:justify-between max-sm:px-2 max-sm:py-3"
 		>
 			<header
 				class="p-1 text-3xl font-extrabold text-teal-200 max-sm:text-[1.65rem]"
@@ -57,11 +57,11 @@ const { id, title, description, anchorLabel, githubLink, imageSrc, website } =
 					{description}
 				</CustomParagraph>
 			</div>
-			<div class="even-self-child flex flex-row self-start">
-				<a href={githubLink} aria-label={anchorLabel} class="h-7"
+			<div class="even-self-child flex flex-row self-start p-1">
+				<a href={githubLink} aria-label={anchorLabel} class="h-8"
 					><IconElement
 						height="h-auto"
-						width="w-8"
+						width="w-7"
 						iconType="github"
 					/></a
 				>
@@ -70,14 +70,14 @@ const { id, title, description, anchorLabel, githubLink, imageSrc, website } =
 						<a href={website} aria-label={anchorLabel} class="h-7">
 							<IconElement
 								height="h-auto"
-								width="w-8"
+								width="w-7"
 								iconType="ph:link-bold"
 							/>
 						</a>
 					)
 				}
 			</div>
-		</section>
+		</article>
 	</div>
 </article>
 <style>
