🐞 fix: header space between links

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -15,7 +15,7 @@ import HamburgerMenuIcon from './HamburgerMenuIcon.astro';
 					<IconElement iconType="house" height="h-6" width="w-7" />
 				</Link>
 			</li>
-			<li class="mx-2">
+			<li class="mx-2 flex flex-row gap-x-6">
 				<Link href="#work" arialLabel="See my work experience">
 					Projects
 				</Link>
