🔧 build: update dependencies

--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -68,11 +68,15 @@ const { id, title, description, anchorLabel, githubLink, imageSrc, website } =
 				{
 					website !== undefined && (
 						<a href={website} aria-label={anchorLabel} class="h-7">
-							<IconElement
+							 <!–– 
+							 TODO: add a new icon
+							 <IconElement
 								height="h-auto"
 								width="w-7"
 								iconType="ph:link-bold"
 							/>
+							 ––>
+							
 						</a>
 					)
 				}
