--- a/src/components/shared/CustomParagraph.astro
+++ b/src/components/shared/CustomParagraph.astro
@@ -9,7 +9,7 @@ const { reveal = false, textColor = 'text-[var(--default-font-color2)]' } =
 
 <p
 	class:list={[{ reveal: reveal }, textColor]}
-	class="] mb-2.5 text-lg max-sm:mb-1"
+	class="mb-2.5 text-lg max-sm:mb-1"
 >
 	<slot />
 </p>
